--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ body {
   margin-top: 2rem;
   margin-bottom: .5rem;
   color: #E54;
+  cursor: pointer;
 }
 
 .faq-lista dt::before {
@@ -204,5 +205,58 @@ body {
   }
   .copy {
     margin-bottom: 0px;
+  }
+}
+
+.js-tabcontent section{
+  display: none;
+}
+
+.js-tabcontent section.ativo{
+  display: block !important;
+  animation: show .5s forwards;
+}
+
+@keyframes show {
+  from {
+    opacity: 0;
+    transform: translate3d(-30px, 0, 0)
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0)
+  }
+}
+
+.animais-lista li{
+  cursor: pointer;
+}
+
+.js-accordion dd {
+  display: none;
+}
+
+.js-accordion dd.ativo {
+  display: block;
+  animation: showAccordion .5s forwards
+}
+
+.js-accordion dt::after {
+  content: '⮧';
+  margin-left: 10px;
+}
+
+.js-accordion dt.ativo::after {
+  content: '⮥'
+}
+
+@keyframes showAccordion {
+  from{
+    opacity: 0;
+    transform: translate3d(0, 30px, 0);
+  }
+  to{
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
   }
 }
