--- a/css/geral.css
+++ b/css/geral.css
@@ -16,7 +16,6 @@ body {
   background: #faf6ed;
   color: #222;
   -webkit-font-smoothing: antialiased;
-
 }
 
 .grid-container {
@@ -100,6 +99,10 @@ body {
   grid-column: 2;
 }
 
+.animais-lista li {
+  cursor: pointer;
+}
+
 .animais-lista::-webkit-scrollbar {
   width: 18px;
 }
@@ -132,7 +135,6 @@ body {
   margin-top: 2rem;
   margin-bottom: .5rem;
   color: #E54;
-  cursor: pointer;
 }
 
 .faq-lista dt::before {
@@ -212,66 +214,80 @@ body {
   }
 }
 
-.js-tabcontent section{
+.js [data-tab="content"] section {
   display: none;
 }
 
-.js-tabcontent section.ativo{
+[data-tab="content"] section.ativo {
   display: block !important;
-  animation: show .5s forwards;
 }
 
-@keyframes show {
+[data-tab="content"] section.ativo.show-right {
+  animation: show-right .5s forwards;
+}
+
+[data-tab="content"] section.ativo.show-down {
+  animation: show-down .5s forwards;
+}
+
+@keyframes show-right {
   from {
     opacity: 0;
-    transform: translate3d(-30px, 0, 0)
+    transform: translate3d(-30px, 0, 0);
   }
   to {
-    opacity: 1;
-    transform: translate3d(0, 0, 0)
-  }
-}
-
-.animais-lista li{
-  cursor: pointer;
-}
-
-.js-accordion dd {
-  display: none;
-}
-
-.js-accordion dd.ativo {
-  display: block;
-  animation: showAccordion .5s forwards
-}
-
-.js-accordion dt::after {
-  content: '⮧';
-  margin-left: 10px;
-}
-
-.js-accordion dt.ativo::after {
-  content: '⮥'
-}
-
-@keyframes showAccordion {
-  from{
-    opacity: 0;
-    transform: translate3d(0, 30px, 0);
-  }
-  to{
     opacity: 1;
     transform: translate3d(0, 0, 0);
   }
 }
 
-.js-scroll {
-  opacity: 0;
-  transition: .3s;
-  transform: translate3d(-30px, 0, 0);
+@keyframes show-down {
+  from {
+    opacity: 0;
+    transform: translate3d(0, -30px, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
 }
 
-.js-scroll.ativo {
+.js [data-anime="accordion"] dd {
+  display: none;
+}
+
+[data-anime="accordion"] dt::after {
+  content: '⬎';
+  margin-left: 10px;
+}
+
+[data-anime="accordion"] dt.ativo::after {
+  content: '⬏';
+}
+
+[data-anime="accordion"] dd.ativo {
+  display: block;
+  animation: slideDown .5s forwards;
+}
+
+@keyframes slideDown {
+  from {
+    opacity: 0;
+    max-height: 0;
+  }
+  to {
+    max-height: 200px;
+    opacity: 1;
+  }
+}
+
+.js [data-anime="scroll"] {
+  opacity: 0;
+  transform: translate3d(-30px, 0, 0);
+  transition: .3s;
+}
+
+.js [data-anime="scroll"].ativo {
   opacity: 1;
   transform: translate3d(0, 0, 0);
 }
