--- a/css/modal.css
+++ b/css/modal.css
@@ -1,8 +1,8 @@
 .modal-container {
-  width: 100%;
   height: 100vh;
-  position: fixed;
+  width: 100%;
   background: rgba(0,0,0,.5);
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 2000;
@@ -12,17 +12,16 @@
 }
 
 .modal-container.ativo {
-   display: flex;
+  display: flex;
 }
 
 .modal {
   background: white;
   min-width: 300px;
   padding: 40px;
-  border: 10px solid #fb5;
+  border: 10px solid #FB5;
   box-shadow: 0 0 0 10px white;
   position: relative;
-
 }
 
 @keyframes modal {
@@ -45,20 +44,19 @@
   height: 50px;
   border-radius: 50%;
   border: 4px solid white;
-  position: absolute;
   top: -30px;
   right: -30px;
-  background: #e54;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, .3);
+  position: absolute;
+  background: #E54;
+  box-shadow: 0 4px 4px 0 rgba(0,0,0,.3);
   font-size: 1.2rem;
   color: white;
-  font-family: monospace;
+  font-family: 'IBM Plex Mono', monospace;
   cursor: pointer;
-
 }
 
 .modal label {
-  font-family: monospace;
+  font-family: 'IBM Plex Mono', monospace;
   display: block;
   font-weight: bold;
   margin: 1rem 0 .5rem 0;
@@ -72,13 +70,13 @@
 
 .modal button[type="submit"] {
   display: block;
-  background: #e54;
+  background: #E54;
   border: none;
   border-radius: 4px;
   padding: .7rem 2rem;
   font-size: 1rem;
   color: white;
+  font-family: 'IBM Plex Mono', monospace;
   margin-top: 1rem;
-  font-family: 'Courier New', Courier, monospace;
   font-weight: bold;
 }
