--- a/css/geral.css
+++ b/css/geral.css
@@ -291,3 +291,18 @@ body {
   opacity: 1;
   transform: translate3d(0, 0, 0);
 }
+
+[data-semana]::after {
+  display: inline-block;
+  content: '';
+  width: 8px;
+  height: 8px;
+  background: red;
+  border-radius: 50%;
+  margin-left: 4px;
+  border: 1px solid black;
+}
+
+[data-semana].aberto::after {
+  background: #3F4;
+}
