--- a/css/numeros.css
+++ b/css/numeros.css
@@ -5,12 +5,6 @@
   grid-gap: 30px;
 }
 
-@media (max-width: 700px){
-  .numeros-grid{
-    grid-column:1;
-  }
-}
-
 .numeros-grid h3 {
   font-size: 2rem;
   font-family: Georgia, 'Times New Roman', Times, serif;
@@ -22,4 +16,13 @@
   font-weight: bold;
   font-family: monospace;
   color: #e54;
+}
+
+@media (max-width: 700px){
+  .numeros-grid{
+    grid-column:1;
+  }
+  .numeros-grid h3{
+    font-size: 1.5rem;
+  }
 }
